# LifeOS

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
docs/: PRD.md  api.md  architecture.md  database.md  routing.md  structure.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: lib.rs  main.rs  mod.rs
src-tauri/src/commands/: calendar.rs  data.rs  mod.rs  notes.rs  pomodoro.rs  projects.rs  search.rs  study.rs  tags.rs  tasks.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs
src-tauri/src/db/queries/: calendar.rs  mod.rs  notes.rs  pomodoro.rs  projects.rs  search.rs  study.rs  tags.rs  tasks.rs
src-tauri/src/models/: calendar_event.rs  mod.rs  note.rs  pomodoro_session.rs  project.rs  setting.rs  study_plan.rs  tag.rs  task.rs
src-tauri/src/utils/: export.rs  mod.rs  time.rs
src/components/: BackgroundPicker.tsx  CommandPalette.tsx  ConfirmModal.tsx  DatePicker.tsx  TaskDetailModal.tsx  ThemeToggle.tsx  UIPreview.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: useCalendar.ts  useMediaQuery.ts  useNotes.ts  usePomodoro.ts  usePomodoroTimer.ts  useProjects.ts  useStudyPlans.ts  useTags.ts  useTasks.ts
src/pages/: CalendarPage.tsx  DashboardPage.tsx  InboxPage.tsx  MorePage.tsx  NotesPage.tsx  PomodoroPage.tsx  StudyPage.tsx  TodayPage.tsx
src/services/: calendarService.ts  dataService.ts  noteService.ts  pomodoroService.ts  (+5 more)
(+18 files in other folders)
